testsuite/tests/splice-imports/SI20.stderr
SI20.hs:9:7: error: [GHC-28914]
    • Level error:
      ‘foo’ is used at level 1 but it is bound at levels {-1, 0}
        • imported at level -1 from ‘SI19A’ at SI20.hs:7:1-19
        • imported from ‘SI19A’ at SI20.hs:6:1-12
    • In the Template Haskell quotation: 'foo

