testsuite/tests/splice-imports/SI20.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
{-# LANGUAGE ExplicitStageImports #-}
module SI20 where

import SI19A
import splice SI19A

boo = 'foo
